surse/err12.txt
prob12.cpp: In function ‘int main()’:
prob12.cpp:18:24: error: no matching function for call to ‘cls::cls()’
     cls* p = new cls[10];
                        ^